# Lefi

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.wave  tox.ini
.github/workflows/: deploy-docs.yml  flake8.yml  mypy.yml  python-publish.yml  run-pytest.yml
API-Reference/actionrow/: index.html
API-Reference/banentry/: index.html
API-Reference/button/: index.html
API-Reference/cache/: index.html
API-Reference/channel/: index.html
API-Reference/client/: index.html
API-Reference/embed/: index.html
API-Reference/emoji/: index.html
API-Reference/errors/: index.html
API-Reference/guild/: index.html
API-Reference/http/: index.html
API-Reference/integration/: index.html
API-Reference/interactions/: index.html
API-Reference/invite/: index.html
API-Reference/member/: index.html
API-Reference/message/: index.html
API-Reference/option/: index.html
docs/: api-reference.rst  conf.py  getting-started.md  index.md  index.rst  internals.rst  lefi.exts.commands.core.rst  lefi.voice.rst  lefi.ws.rst  modules.rst  requirements.txt  rtd_requirements.txt
examples/: README.md  example_bot.py  example_client.py  example_plugin.py  example_voice.py
getting-started/: index.html
lefi/: __init__.py  client.py  errors.py  http.py  ratelimiter.py  state.py
lefi/objects/: base.py  (+24 more)
scripts/: run-tests.sh  setup-dev.sh
search/: search_index.json
site/: 404.html  index.html  objects.inv  rtd_requirements.txt
tests/: test_cache.py  test_find.py  test_flags.py  test_get.py  test_once.py  test_wait_for.py
(+145 files in other folders)
