[tool.poetry]
name = "lefi"
version = "0.1.0"
description = ""
authors = ["an-dyy <yrisxl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
PyNaCl = "^1.4.0"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
